--- a/glutin/Cargo.toml
+++ b/glutin/Cargo.toml
@@ -15,10 +15,11 @@ features = ["serde"]
 
 [features]
 serde = ["winit/serde"]
+platform_x11 = ["glutin_glx_sys"]
 
 [dependencies]
 lazy_static = "1.3"
-winit = "0.20.0-alpha4"
+winit = { git = "https://github.com/neonmoe/winit", branch = "patch-featureize-x11-wayland" }
 
 [target.'cfg(target_os = "android")'.dependencies]
 android_glue = "0.2"
@@ -58,6 +59,6 @@ osmesa-sys = "0.1"
 wayland-client = { version = "0.23", features = ["egl", "dlopen"] }
 libloading = "0.5"
 glutin_egl_sys = { version = "0.1.3", path = "../glutin_egl_sys" }
-glutin_glx_sys = { version = "0.1.5", path = "../glutin_glx_sys" }
+glutin_glx_sys = { version = "0.1.5", path = "../glutin_glx_sys", optional = true }
 parking_lot = "0.9"
 log = "0.4"
